# EuljiroBible

./: .gitignore  EuljiroBible.py  LICENSE  README.md  RELEASE_NOTES_v2.0.3-test1.md  pyproject.toml  requirements.txt
cli/: cli_main.py  commands.py
core/: version.py
core/config/: paths.py
core/logic/: verse_logic.py
core/store/: storage.py
core/utils/: bible_data_loader.py  bible_keyword_searcher.py  bible_parser.py  file_helpers.py  input_validators.py  logger.py  utils_bible.py  utils_output.py  utils_version.py  verse_version_helper.py
data/: 라틴어 Latin Vulgate (405).json  아시아_중국어 简体和合本 (1919).json  아시아_중국어 繁體和合本 (1919).json
gui/: gui_main.py  launch.py
gui/config/: config_manager.py
gui/constants/: messages.py
gui/ui/: common.py  monitor_memory.py  tab_keyword.py  tab_keyword_logic.py  tab_keyword_ui.py  tab_settings.py  tab_settings_logic.py  tab_settings_ui.py  tab_verse.py  tab_verse_logic.py  tab_verse_selection_manager.py  tab_verse_ui.py  widget_overlay.py  window_main.py
gui/ui/locale/: message_loader.py
gui/utils/: keyword_highlight_delegate.py  keyword_result_model.py  logger.py  overlay_factory.py  settings_helper.py  state_saver.py  ui_restore.py  utils_dialog.py  utils_display.py  utils_env.py  utils_fonts.py  utils_save.py  utils_theme.py  utils_validation.py  utils_window.py  verse_output_handler.py
json/: settings.json
json/translations/: en.json  ko.json
release_stage/: LICENSE
release_stage/_internal/core/: alias_loader.py  logger.py  utils_bible.py  utils_output.py  verse_logic.py
(+4 files in other folders)
