[project]
name = "EuljiroBible-CLI"
version = "2.0.3-test2"
description = "Terminal-based verse search tool for EuljiroBible"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }

authors = [
  { name = "Benjamin Jaedon Choi", email = "euljirochurch [at] gmail [dot] com" }
]

[project.scripts]
bible = "cli.cli_main:main"

[tool.setuptools]
packages = ["cli", "core", "json"]
include-package-data = true

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"