[project]
name = "EuljiroBible"
version = "2.0.4"
description = "Command-line Bible search tool with multi-version support"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name = "Benjamin Jaedon Choi", email = "euljirochurch@gmail.com" }
]
license = "MIT"

[project.scripts]
bible = "cli.cli_main:main"

[tool.setuptools]
packages = ["cli", "core", "json"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"